fix: gdoc-md overflow (#926)

--- a/docs/static/custom.css
+++ b/docs/static/custom.css
@@ -37,3 +37,7 @@
     --footer-link-color-visited: #ffffff;
   }
 }
+
+.gdoc-markdown pre,.gdoc-markdown code {
+  overflow: auto;
+}
